[tool.poetry]
name = "vision"
version = "0.1.0"
description = "First steps in computer vision field"
authors = ["Ivan Dziadyk <vaaano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12.0"
jupyterlab = "^4.0.9"
pillow = "^10.1.0"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
kaggle = "^1.5.16"
scikit-learn = "^1.3.2"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
